[gd_scene load_steps=11 format=3 uid="uid://xr31gi5ou22p"]

[ext_resource type="Script" uid="uid://cidbmcw2jvpgw" path="res://scripts/main_menu.gd" id="1_1lf7f"]
[ext_resource type="Texture2D" uid="uid://nelvbo5bhms0" path="res://assets/backgrounds/CDS_2.png" id="2_guywi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lf7f"]
bg_color = Color(0.921569, 0.945098, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guywi"]
bg_color = Color(0.913725, 0.941176, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37v3f"]
bg_color = Color(0.913725, 0.941176, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.072)
shadow_size = 4
shadow_offset = Vector2(0, 4.09)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewhso"]
bg_color = Color(0.796078, 0.858824, 0.988235, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_orc0m"]
bg_color = Color(0.913725, 0.941176, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.913725, 0.941176, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skis4"]
bg_color = Color(0.882353, 0.32549, 0.207843, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1q6q"]
bg_color = Color(0.913725, 0.941176, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_meetk"]
bg_color = Color(0.796078, 0.858824, 0.988235, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1lf7f")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_guywi")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 0
offset_left = 289.0
offset_top = 258.0
offset_right = 613.0
offset_bottom = 288.0
theme_override_constants/separation = 12

[node name="PlayButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_1lf7f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_guywi")
theme_override_styles/normal = SubResource("StyleBoxFlat_37v3f")
text = "JOGAR"

[node name="OptionsButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_normal_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_outline_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_1lf7f")
theme_override_styles/normal = SubResource("StyleBoxFlat_37v3f")
text = "OPÇÕES"

[node name="CreditsButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_normal_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_outline_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_1lf7f")
theme_override_styles/normal = SubResource("StyleBoxFlat_37v3f")
text = "CRÉDITOS"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_normal_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_outline_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_1lf7f")
theme_override_styles/normal = SubResource("StyleBoxFlat_37v3f")
text = "SAIR"

[node name="OverlayDarkener" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="OptionsPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(230, 230)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ewhso")

[node name="OptionsTitle" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_top = 4.0
offset_right = 31.5
offset_bottom = 27.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
text = "OPÇÕES"

[node name="Volume" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.5
offset_top = 78.0
offset_right = 32.5
offset_bottom = 101.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -8.0
offset_right = 100.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_orc0m")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_skis4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_skis4")
step = 0.2
value = 30.0

[node name="Button" type="Button" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -39.0
offset_right = 37.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_normal_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_outline_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_1lf7f")
theme_override_styles/normal = SubResource("StyleBoxFlat_w1q6q")
text = "FECHAR"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(270, 310)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_meetk")

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.5
offset_top = 3.0
offset_right = 121.5
offset_bottom = 287.0
grow_horizontal = 2
theme_override_constants/separation = 19

[node name="Label2" type="Label" parent="CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
text = "CRÉDITOS"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
text = "PRODUÇÃO E DOCUMENTAÇÃO
Alana Neves"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
text = "PROGRAMAÇÃO
Felipe Silva"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
text = "ARTE E UI
Beatriz Tardin
Beatriz Ventura"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -40.0
offset_right = 37.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_disabled_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_hover_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/icon_normal_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_outline_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_focus_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0.0980392, 0.105882, 0.160784, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_1lf7f")
theme_override_styles/normal = SubResource("StyleBoxFlat_w1q6q")
text = "FECHAR"

[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OptionsPanel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CreditsPanel/Button" to="." method="_on_button_pressed"]
